More documentation. Moved scrollbar of menu to left hand side. Fixed issue where scrollbar of documentation wasnt visible. Background of selected code is now inverted

--- a/frontend/src/components/CodeBlock.scss
+++ b/frontend/src/components/CodeBlock.scss
@@ -18,49 +18,57 @@
   }
 }
 
+@mixin syntaxColor($color) {
+  color: $color;
+  &::selection {
+    background: rgba($color, 0.4);
+  }
+}
+
 .hljs-keyword {
-  color: $color-primary-0;
+  @include syntaxColor($color-primary-0)
 }
 
 .hljs-comment {
-  color: $color-dark-2;
+  @include syntaxColor($color-dark-2);
 }
 
 .hljs-type {
-  color: $color-secondary-1-3;
+  @include syntaxColor($color-secondary-1-3);
 }
 
 .hljs-string {
-  color: $color-secondary-1-0;
+  @include syntaxColor($color-secondary-1-0);
 }
 
 .hljs-escapeChar {
-  color: $color-secondary-1-1;
+  @include syntaxColor($color-secondary-1-1);
 }
 
 .hljs-number {
-  color: $color-secondary-2-0;
+  @include syntaxColor($color-secondary-2-0);
 }
 
 .hljs-symbol {
-  color: $color-dark-1;
+  @include syntaxColor($color-dark-1);
 }
 
 .hljs-literal {
-  color: $color-secondary-2-0;
+  @include syntaxColor($color-secondary-2-0);
 }
 
 .hljs-params {
-  color: $color-secondary-2-0;
-}
-
-.react-syntax-highlighter-line-number {
-  color: $color-secondary-2-0;
-  font-weight: bold;
+  @include syntaxColor($color-secondary-2-0);
 }
 
 .hljs-tab {
-  color: rgba($color-primary-3, 0.1)
+  color: rgba($color-primary-3, 0.1);
+  &::selection {
+    background: rgba($color-primary-3, 0.05);
+  }
 }
 
-
+.react-syntax-highlighter-line-number {
+  @include syntaxColor($color-secondary-2-0);
+  font-weight: bold;
+}
