--- a/frontend/src/components/documentation/DocumentationView.scss
+++ b/frontend/src/components/documentation/DocumentationView.scss
@@ -28,6 +28,11 @@ $pageHeight: calc(100vh - #{$navBarHeight});
   height: $pageHeight;
   overflow-y: scroll;
   padding-top: 0;
+  transform: scaleX(-1);
+}
+
+#Documentation-menu-inner {
+  transform: scaleX(-1);
 }
 
 #Documentation-navbar {
@@ -40,6 +45,7 @@ $pageHeight: calc(100vh - #{$navBarHeight});
 #Documentation-docs {
   border: none;
   height: $pageHeight;
+  width: calc(100% - 15px); // To make room for the scroll bar, otherwise it ends up outside the window for some reason
   overflow-y: scroll;
 }
 
